feat: implement Top 500 Enterprise Screening engine and real-time SSE streaming pipeline